# haskell-for-living

./: myproject.cabal
src/: Dao.hs  Lib.hs  SnowflakePhantom.hs
